<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="activity_chat_btn_send">Send</string>

    <string name="app_name">Happy</string>

    <string name="btn_feed_map">Mood Map</string>
    <string name="btn_home_feed">Activity Log</string>
    <string name="btn_home_log">My Log</string>
    <string name="btn_home_map">Mood Map</string>
    <string name="btn_home_support">Support</string>
    <string name="btn_home_update">Update Mood</string>
    <string name="btn_log_update">Update mood</string>
    <string name="btn_login_login">Login</string>
    <string name="btn_login_register">Go to registration</string>
    <string name="btn_main_login">Login</string>
    <string name="btn_main_nav">Nav</string>
    <string name="btn_main_register">Register</string>
    <string name="btn_main_settings">Settings</string>
    <string name="btn_main_tabs">Tabs</string>
    <string name="btn_register_create_account">Create Account</string>
    <string name="btn_register_login">Go to login</string>
    <string name="btn_support_about">About Happy</string>
    <string name="btn_support_apps">Apps</string>
    <string name="btn_support_chat">Chat</string>
    <string name="btn_support_mental">Mental Health</string>
    <string name="btn_support_physical">Physical Health</string>
    <string name="btn_update_update">Update mood</string>

    <!-- Dialog/Fragment names -->
    <string name="dialog_new_mood">New Mood Dialog</string>
    <string name="dialog_view_mood">View Mood Dialog</string>

    <!-- Strings -->
    <string name="mood_title">Title</string>
    <string name="mood_content">What made you feel this way?</string>


    <string name="menu_more_feedback">Feedback</string>
    <string name="menu_more_filter">Filter</string>
    <string name="menu_more_insights">Insights</string>
    <string name="menu_more_log_out">Log Out</string>
    <string name="menu_more_settings">Settings</string>
    <string name="menu_more_support">About</string>
    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_insights">Insights</string>
    <string name="menu_nav_support">Support</string>
    <string name="menu_tab_settings">Settings</string>

    <string name="switch_settings_clear">Clear all moods from my account</string>
    <string name="switch_settings_data">Data</string>
    <string name="switch_settings_delete">Delete my account</string>
    <string name="switch_settings_reminders">Remind me to update my mood daily at 18:00</string>
    <string name="switch_settings_sounds">Sounds</string>
    <string name="switch_settings_vibration">Vibration</string>
    <string name="switch_update_update_location_text">Include my location</string>
    <string name="switch_update_update_username">Show my username</string>
    <string name="switch_update_update_visibility">Visible to others</string>

    <string name="text_chat_message_bot_1">Hello, how are you feeling today? :)</string>
    <string name="text_chat_message_bot_2">What seems to be the matter?</string>
    <string name="text_chat_message_bot_3">Maybe you should chat to a friend about this?</string>
    <string name="text_chat_message_bot_4">You can also reach out to your GP or local counselling service: 01-256-9845 or www.dublin-counselling.com</string>
    <string name="text_chat_message_user_1">Hi</string>
    <string name="text_chat_message_user_2">Not so good</string>
    <string name="text_chat_message_user_3">I\'m feeling depressed</string>
    <string name="text_chat_title">HappyBot</string>
    <string name="text_feed_title">How other users are feeling</string>
    <string name="text_home_title">Home</string>
    <string name="text_input_chat_chatbox_hint">Enter your reply</string>
    <string name="text_input_login_password_hint">Password</string>
    <string name="text_input_login_username_hint">Username</string>
    <string name="text_input_register_email_hint">Enter your email</string>
    <string name="text_input_register_password_1_hint">Create password</string>
    <string name="text_input_register_password_2_hint">Confirm password</string>
    <string name="text_input_update_update_hint">What influenced how you feel?</string>
    <string name="text_insights_title">Insights</string>
    <string name="text_log_heading">How Do You Feel?</string>
    <string name="text_log_title">My Mood Log</string>
    <string name="text_login_title">Login</string>
    <string name="text_main_title">Welcome</string>
    <string name="text_map_title">Mood Map</string>
    <string name="text_register_title">Register</string>
    <string name="text_setting_title_account">Account</string>
    <string name="text_setting_title_notifications">Notifications</string>
    <string name="text_settings_clear">Clear all moods from my account</string>
    <string name="text_settings_delete">Delete my account</string>
    <string name="text_settings_log_out">Log out</string>
    <string name="text_settings_title">Settings</string>
    <string name="text_settings_update_password">Change password</string>
    <string name="text_settings_version_number">App Version: 0.1</string>
    <string name="text_support_title">Support</string>
    <string name="text_tab_1">Tab 1</string>
    <string name="text_tab_2">Tab 2</string>
    <string name="text_tab_3">Tab 3</string>
    <string name="text_title_tab_activity">TabActivity</string>
    <string name="text_update_preview">Preview</string>
</resources>
