<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kevinmaher.x14328981.happy.MainActivity">

    <item
        android:id="@+id/menu_more_filter"
        android:orderInCategory="1"
        android:icon="@drawable/ic_menu_filter"
        android:title="@string/menu_more_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_more_feedback"
        android:orderInCategory="70"
        android:title="@string/menu_more_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_more_about"
        android:orderInCategory="80"
        android:title="@string/menu_more_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_more_settings"
        android:orderInCategory="100"
        android:title="@string/menu_more_settings"
        app:showAsAction="never" />
    <!--Log out is in menu for testing and should be moved to settings screen-->
    <item
        android:id="@+id/menu_more_log_out"
        android:orderInCategory="101"
        android:title="@string/menu_more_log_out"
        app:showAsAction="never" />

</menu>

    <!--show as 'settings' without menu--><!--app:showAsAction="always" />-->

    <!--app:srcCompat="@android:drawable/ic_menu_sort_by_size"-->

    <!--android:icon="@android:drawable/ic_menu_sort_by_size"-->