<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kevinmaher.x14328981.happy.SettingsActivity">

    <TextView
        android:id="@+id/text_settings_title_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="left|center_vertical|center"
        android:padding="20dp"
        android:text="@string/text_setting_title_notifications"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch_settings_reminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_settings_title_notifications"
        android:padding="20dp"
        android:text="@string/switch_settings_reminders"
        android:textAllCaps="false" />

    <Switch
        android:id="@+id/switch_settings_sounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch_settings_reminders"
        android:padding="20dp"
        android:text="@string/switch_settings_sounds" />

    <Switch
        android:id="@+id/switch_settings_vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch_settings_sounds"
        android:padding="20dp"
        android:text="@string/switch_settings_vibration" />

    <TextView
        android:id="@+id/text_settings_version_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_settings_log_out"
        android:gravity="left|center_vertical|center"
        android:padding="20dp"
        android:text="@string/text_settings_version_number" />

    <TextView
        android:id="@+id/text_settings_title_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch_settings_vibration"
        android:gravity="left|center_vertical|center"
        android:padding="20dp"
        android:text="@string/text_setting_title_account"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_settings_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="left|center_vertical|center"
        android:padding="20dp"
        android:text="@string/text_settings_log_out"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_settings_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_settings_clear"
        android:gravity="left|center_vertical|center"
        android:padding="20dp"
        android:text="@string/text_settings_update_password"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_settings_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_settings_delete"
        android:gravity="left|center_vertical|center"
        android:padding="20dp"
        android:text="@string/text_settings_clear"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_settings_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_settings_title_account"
        android:gravity="left|center_vertical|center"
        android:padding="20dp"
        android:text="@string/text_settings_delete"
        android:textColor="@android:color/black" />

</RelativeLayout>