<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kevinmaher.x14328981.happy.RegisterActivity">

    <Button
        android:id="@+id/btn_register_login"
        android:layout_width="327dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_rounding_grey"
        android:text="@string/btn_register_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_register_create_account"
        android:layout_width="327dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="202dp"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_register_create_account"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/text_input_register_password_1"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/text_input_register_password_1_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/text_input_register_password_2"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:ems="10"
        android:hint="@string/text_input_register_password_2_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/text_input_register_email"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_input_register_email_hint"
        android:inputType="textEmailAddress" />

</RelativeLayout>