<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kevinmaher.x14328981.happy.HomeActivity">

    <Button
        android:id="@+id/btn_home_support"
        android:layout_width="323dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_home_support"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_home_chat"
        android:layout_width="323dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_home_chat"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_support_websites"
        android:layout_width="339dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_home_update"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_main_register"
        android:layout_width="323dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_home_map"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_home_feed"
        android:layout_width="323dp"
        android:layout_height="@dimen/btn_height"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_home_feed"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_home_log"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_alignEnd="@+id/btn_support_websites"
        android:layout_alignStart="@+id/btn_support_websites"
        android:layout_alignTop="@+id/btn_support_websites"
        android:layout_marginTop="@dimen/btn_top_spacing"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_home_log"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</RelativeLayout>