<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/textView_update_mood_title"
    tools:context="com.kevinmaher.x14328981.happy.UpdateActivity">

    <Button
        android:id="@+id/btn_update_face"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_alignStart="@+id/editText_update_update"
        android:layout_alignTop="@+id/textView_update_mood_title"
        android:background="@drawable/btn_face_happy_unselected" />

    <TextView
        android:id="@+id/textView_update_mood_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_update_mood_title"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="113dp"
        android:hint="Location" />

    <TextView
        android:id="@+id/textView_update_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_update_mood_location"
        android:layout_marginTop="-113dp"
        android:layout_toStartOf="@+id/btn_update_visibility"
        android:hint="Username" />

    <TextView
        android:id="@+id/textView_update_mood_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_update_mood_location"
        android:layout_below="@+id/textView_update_mood_title"
        android:layout_marginTop="-153dp"
        android:hint="Time" />

    <TextView
        android:id="@+id/textView_update_mood_date"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_update_mood_location"
        android:layout_below="@+id/textView_update_mood_title"
        android:hint="Date" />

    <TextView
        android:id="@+id/textView_update_mood_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_update_happy"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:text="Mood Influencer"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_update_happy"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_alignEnd="@+id/editText_update_update"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_face_happy_selected" />

    <!--<Button-->
    <!--android:id="@+id/btn_update_happy_unselected"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="81dp"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_alignStart="@+id/editText3"-->
    <!--android:layout_marginTop="36dp"-->
    <!--android:background="@drawable/btn_face_happy_unselected" />-->

    <EditText
        android:id="@+id/editText_update_update"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:hint="@string/text_input_update_update_hint"
        android:inputType="textPersonName"
        android:textStyle="bold" />

    <!--widget to make the hint text float to the top-->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/textInput_update_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<EditText-->
    <!--android:id="@+id/textView_update_update"-->
    <!--android:layout_width="308dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="142dp"-->
    <!--android:ems="10"-->
    <!--android:hint="What influenced how you feel?"-->
    <!--android:inputType="textPersonName"-->
    <!--android:textStyle="bold" />-->
    <!--</android.support.design.widget.TextInputLayout>-->

    <Button
        android:id="@+id/btn_update_update"
        android:layout_width="307dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@drawable/btn_rounding_orange"
        android:text="@string/btn_update_update"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_update_indifferent"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_alignTop="@+id/btn_update_happy"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_face_indifferent_selected" />

    <!--<Button-->
    <!--android:id="@+id/btn_update_indifferent_unselected"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="82dp"-->
    <!--android:layout_alignTop="@+id/btn_update_happy"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:background="@drawable/btn_face_indifferent_unselected" />-->

    <Button
        android:id="@+id/btn_update_sad"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_alignStart="@+id/editText_update_update"
        android:layout_alignTop="@+id/btn_update_happy"
        android:background="@drawable/btn_face_sad_selected" />

    <Switch
        android:id="@+id/switch_update_update_location"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_update_mood_location"
        android:layout_alignParentTop="true"
        android:layout_marginTop="202dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/switch_update_update_location_text" />

    <Switch
        android:id="@+id/switch_update_update_visibility"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_update_mood_location"
        android:layout_below="@+id/switch_update_update_location"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/switch_update_update_visibility" />

    <Switch
        android:id="@+id/switch_update_update_username"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_update_mood_location"
        android:layout_below="@+id/switch_update_update_visibility"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/switch_update_update_username" />

    <Button
        android:id="@+id/btn_update_location_info"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/switch_update_update_location"
        android:layout_alignStart="@+id/btn_update_face"
        android:background="@drawable/ic_info" />

    <Button
        android:id="@+id/btn_update_visibility_info"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/btn_update_face"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_info" />

    <Button
        android:id="@+id/btn_update_username_info"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/btn_update_face"
        android:layout_below="@+id/btn_update_visibility_info"
        android:background="@drawable/ic_info" />

    <Button
        android:id="@+id/btn_update_visibility"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignEnd="@+id/textView_update_mood_location"
        android:layout_below="@+id/textView_update_mood_location"
        android:layout_marginTop="-113dp"
        android:background="@drawable/ic_person_outline_black" />

    <TextView
        android:id="@+id/text_update_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="189dp"
        android:text="@string/text_update_preview"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!--<Button-->
    <!--android:id="@+id/btn_update_sad_unselected"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="81dp"-->
    <!--android:layout_alignEnd="@+id/editText3"-->
    <!--android:layout_alignTop="@+id/btn_update_happy"-->
    <!--android:background="@drawable/btn_face_sad_unselected" />-->

</RelativeLayout>